--- a/core/templates/core/admin_delete_confirm.html
+++ b/core/templates/core/admin_delete_confirm.html
@@ -2,19 +2,19 @@
 {% block title %}Delete Student{% endblock %}
 
 {% block content %}
-<div class="container py-5 d-flex justify-content-center">
-
-  <div class="card shadow-sm p-4" style="max-width: 450px; width: 100%;">
+<div class="container py-4 d-flex justify-content-center">
+  <div class="card shadow-sm p-4" style="max-width: 500px; width: 100%;">
+    
     <h4 class="fw-semibold mb-3">Delete Student</h4>
 
-    <p class="mb-4">Are you sure you want to delete <strong>{{ student.full_name }}</strong>?</p>
+    <p>Are you sure you want to delete <strong>{{ student.full_name }}</strong>?</p>
 
     <form method="post">
       {% csrf_token %}
       <button type="submit" class="btn btn-danger">Delete</button>
-      <a href="{% url 'admin_bus_students' bus_number %}" class="btn btn-light ms-2">Cancel</a>
+      <a href="{% url 'admin_bus_students' bus_id %}" class="btn btn-light ms-2">Cancel</a>
     </form>
-  </div>
 
+  </div>
 </div>
 {% endblock %}
