--- a/core/templates/core/admin_edit_student.html
+++ b/core/templates/core/admin_edit_student.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 <div class="container py-4 d-flex justify-content-center">
-
   <div class="card shadow-sm p-4" style="max-width: 500px; width: 100%;">
     <h4 class="fw-semibold mb-3">Edit Student</h4>
 
@@ -13,10 +12,9 @@
 
       <div class="mt-3">
         <button type="submit" class="btn btn-primary">Save</button>
-        <a href="{% url 'admin_bus_students' student.bus_number %}" class="btn btn-light ms-2">Cancel</a>
+        <a href="{% url 'admin_bus_students' student.bus.id %}" class="btn btn-light ms-2">Cancel</a>
       </div>
     </form>
   </div>
-
 </div>
 {% endblock %}
