--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,7 +13,15 @@
     <div class="container">
       <a class="navbar-brand fw-semibold" href="{% url 'landing' %}">BusTrack Pro</a>
       <div>
-        <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+        {% if request.user.is_authenticated %}
+          <a href="{% url 'logout' %}" class="btn btn-outline-danger">
+            Logout
+          </a>
+        {% else %}
+          <a href="{% url 'login' %}" class="btn btn-primary">
+            Login
+          </a>
+        {% endif %}
       </div>
     </div>
   </nav>
